# epdserve

./: README.md  README_CODE.md  analyze.py  automate_e2e.py  env.yml  launch_server.sh  offline.py  online.py
baselines/d/: launch_server.sh  offline.py  online.py  structs.py
baselines/d/distserve/: api_server.py  config.py  engine_common.py  engine_decoding.py  llm_async.py  llm_engine.py  llm_offline.py  request.py  scheduler_decoding.py  utils.py  worker.py
baselines/pd/: launch_server.sh  offline.py  online.py
baselines/pd/distserve/: __init__.py  api_server.py  block_manager.py  config.py  engine_common.py  engine_context.py  engine_decoding.py  lifetime.py  llm_async.py  llm_engine.py  llm_offline.py  request.py  scheduler_context.py  scheduler_decoding.py  worker.py
baselines/pd/runs/None/: lifetime_events.json  run_stats.json  tb_metrics.json
csrc/: CMakeLists.txt  README_CUDA.md  block_migration.cpp  block_migration.h  cuda_utils.h  debug_utils.h  nccl-copy.cpp  py_nccl.cc  setup.py  zero_copy.cpp
csrc/tests/: client.py  server.py  test.py
epdserve/: __init__.py  api_server.py  block_manager.py  config.py  engine_common.py  engine_context.py  engine_decoding.py  engine_encoding.py  lifetime.py  llm_async.py  llm_offline.py  logger.py  orchestrator.py  request.py  resource_allocation.py  scheduler_context.py  scheduler_decoding.py  scheduler_encoding.py  tokenizer.py  utils.py  worker.py
